@@ -16,6 +16,7 @@ plugins {
     id 'org.springdoc.openapi-gradle-plugin' version '1.9.0' apply false
     id 'de.thetaphi.forbiddenapis' version '3.10' apply false
     id 'nu.studer.jooq' version '9.0' apply false
+    id 'org.checkerframework' version '0.6.61' apply false
 }
 
 allprojects {
@@ -66,6 +67,18 @@ subprojects {
         dependencies {
             compileOnly 'com.github.spotbugs:spotbugs-annotations'
             compileOnly 'org.checkerframework:checker-qual'
+        }
+
+        // --- Checker Framework (FenumChecker) ---
+        apply plugin: 'org.checkerframework'
+        dependencies {
+            checkerFramework platform(project(':platform-bom'))
+            checkerFramework 'org.checkerframework:checker'
+        }
+        checkerFramework {
+            checkers = ['org.checkerframework.checker.fenum.FenumChecker']
+            extraJavacArgs = ['--enable-preview']
+            excludeTests = true
         }
 
         // --- OpenAPI annotations (@Schema, @Parameter, etc.) ---
